# px4_cv_search_people

./: .gitignore  README.md
docs/technology_breakdowns/: README.md  astar_evacuation_route.md  gazebo_scene_mapping.md  limitations_and_future_work.md  mission_state_machine.md  px4_offboard_control.md  search_coverage_planning.md  simulation_stack.md  system_architecture.md  target_acquisition.md  yolo_person_detection.md
scripts/: predict_video_yolo.sh  train_yolo_gpu.sh
src/offboard_takeoff/: package.xml  setup.cfg  setup.py
src/offboard_takeoff/config/: aruco_detector.yaml  dino_detector.yaml  grounding_dino_detector.yaml  yolo_detector.yaml
src/offboard_takeoff/launch/: aruco_detection.launch.py  dino_detection.launch.py  person_detection.launch.py  scene_map.launch.py  top_down_map.launch.py
src/offboard_takeoff/offboard_takeoff/: __init__.py  aruco_detector.py  camera_viewer.py  grounding_dino_detector.py  mission.py  navigation.py  node.py  offboard_takeoff.py  path_planner.py  scene_map_publisher.py  top_down_map_viewer.py  yolo_detector.py
tools/: audit_yolo_dataset.py  export_yolo_onnx.py  predict_video_yolo.py  train_yolo.py
training/yolo/: README.md  data_person.yaml  requirements.txt
